--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "description": "auth0 manager-token cacher",
   "main": "index.js",
-  "scripts": {
-    "postinstall": "node_modules/.bin/coffee --bare --compile index.coffee",
-    "test": "coffee index.coffee"
-  },
+  "scripts": {},
   "keywords": [
     "auth0",
     "express",
@@ -17,8 +14,5 @@
   "dependencies": {
     "node-cache": "^4.1.1",
     "request": "^2.83.0"
-  },
-  "devDependencies": {
-    "coffee-script": "^1.12.7"
   }
 }
